footer hiding contact links on mobile. trying to fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2047,7 +2047,7 @@ p.bio {
 
 			#copyright {
 				margin-top: 6em;
-				padding-top: 4em;
+				padding-top: 15px;
 			}
 
 	}
@@ -2136,7 +2136,7 @@ p.bio {
 
 			#copyright {
 				margin-top: 5em;
-				padding-top: 2em;
+				padding-top: 10px;
 			}
 
 	}
@@ -2511,7 +2511,7 @@ p.bio {
 
 			#copyright {
 				margin-top: 2em;
-				padding-top: 2em;
+				padding-top: 10px;
 			}
 
 	}
